<resources>
    <string name="global_try_again">Tentar novamente</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_do_login">Fazer login</string>
    <string name="global_ok">OK</string>
    <string name="error_title">Oops!</string>
    <string name="error_unknown">Não foi possível completar a operação. Tente novamente mais tarde. Se o problema persistir entre em contato conosco.</string>
    <string name="error_network">Não foi possível completar a operação. Verifique sua conexão e tente novamente.</string>
    <string name="error_unprocessable">Não foi possível completar a operação. Os seguintes problemas foram encontrados:\n\n%s</string>
    <string name="error_unauthorized_login_now">Não foi possível completar a operação. Sua sessão expirou. Por favor faça login novamente.</string>
    <string name="error_not_found">Não encontrado</string>
    <string name="error_server_internal">Não foi possível completar a operação. Tente novamente mais tarde. Se o problema persistir entre em contato conosco.</string>
    <string name="error_timeout">Tempo expirado. Por favor, tente novamente.</string>
    <string name="activity_login_error">Email ou senha errados.</string>
    <string name="global_wait">Aguarde...</string>
    <string name="validation_name">Nome inválido</string>
    <string name="validation_email">Email inválido</string>
    <string name="validation_phone_number">Número de telefone inválido</string>
    <string name="validation_cpf">CPF inválido</string>
    <string name="validation_password">Senha inválida</string>
    <string name="validation_password_confirmation">Confirmação diferente da senha</string>
    <string name="activity_login_sign_in_with">Faça login com</string>
    <string name="global_facebook">Facebook</string>
    <string name="global_google">Google</string>
    <string name="global_or">Ou</string>
    <string name="global_yes">Sim</string>
    <string name="global_no">Não</string>
    <string name="hint_user_or_email">Usuário ou email</string>
    <string name="hint_password">Senha</string>
    <string name="activity_login_sign_in">Entrar</string>
    <string name="activity_login_sign_up">Criar uma conta</string>
    <string name="activity_login_forgot_password">Esqueci minha senha</string>
    <string name="activity_login_please_wait_for_result">Aguarde o resultado do login para prosseguir.</string>
    <string name="activity_register">Cadastro</string>
    <string name="activity_register_choose_picture">Escolher foto</string>
    <string name="hint_full_name">Nome Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Telefone</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_password_confirmation">Confirmar senha</string>
    <string name="activity_register_submit">Finalizar cadastro</string>
    <string name="activity_recover_password">Recuperar senha</string>
    <string name="activity_recover_password_inform_email">Informe o seu email para recuperar sua senha</string>
    <string name="activity_recover_password_send">Enviar</string>
    <string name="activity_recover_password_success">Verifique a sua caixa de entrada e siga as instruções do email para recuperar sua senha.</string>
    <string name="error_facebook_sdk">O Facebook não nos devolveu nenhuma informação para realizar o login. Por favor, tente novamente.</string>
    <string name="error_facebook_denied_permissions">É necessário aceitar todas as permissões no Facebook para realizar o login. Por favor, tente novamente.</string>
    <string name="error_invalid_email">Email Inválido</string>
    <string name="error_invalid_password">Senha Inválida</string>
    <string name="global_send">Enviar</string>
    <string name="global_pick_avatar_using">Escolher imagem usando:</string>
    <string name="activity_sign_up">Criar Conta</string>
</resources>
